--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,11 @@
 
+
+.alert-error {
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
+}
+
 .homelink,.hellolink,.formlink,.buttonlink,.timerlink{
     margin: 10px;
   }
